[package]
name = "sh1107g-rs"
version = "0.1.0"
edition = "2024"

authors = ["p14c31355 <thinkoverheat@gmail.com>"]
license = "MIT OR Apache-2.0" 
description = "A no_std I2C driver for SH1107G (128x128) OLED displays, compatible with embedded-hal and embedded-graphics."
repository = "https://github.com/p14c31355/sh1107g-rs" # GitHubリポジトリのURL
keywords = ["sh1107", "sh1107g", "oled", "display", "embedded-hal", "no-std"]
categories = ["embedded", "hardware-support", "no-std"]
readme = "README.md"

[dependencies]
embedded-hal = { version = "1.0.0", optional = true }
heapless = "0.8.0"
embedded-graphics = { version = "0.8.1", default-features = false }
embedded-graphics-core = "0.4.0"

embedded-hal-async = { version = "1.0.0", optional = true }
ufmt = "0.2.0"
ufmt-write = "0.1.0"
ufmt-macros = "0.2.0"

[features]
default = ["sync"]
sync = ["dep:embedded-hal"]
async_ = ["dep:embedded-hal-async"]
std = []
